--- a/Css/main.css
+++ b/Css/main.css
@@ -135,6 +135,9 @@
   text-decoration: inherit;
   font-size: 24px;
   padding: 20px;
+  font-family: "source Sans Pro", sans-serif;
+  font-weight: 800;
+  font-style: normal;
 }
 .navbar {
   width: 95%;
